# XFast-Manager

./: .gitignore  .prettierignore  1.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DEVELOPER_GUIDE.md  PLAN.md  README.md  SCAN_OPTIMIZATION_RELIABILITY.md  TODO.md  USER_GUIDE.md  api_test.mjs  eslint.config.js  flickering-orbiting-whale.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: analyzer.rs  app_dirs.rs  atomic_installer.rs  cache.rs  error.rs  geo_regions.rs  hash_collector.rs  installer.rs  lib.rs  library_links.rs  livery_patterns.rs  logger.rs  main.rs  management_index.rs  models.rs  performance.rs  registry.rs  scanner.rs  scenery_classifier.rs  scenery_index.rs  scenery_packs_manager.rs  task_control.rs  updater.rs  verifier.rs
src-tauri/src/analysis/: analyzer.rs  crash_analysis.rs  disk_usage.rs  hash_collector.rs  livery_patterns.rs  scanner.rs
src-tauri/src/analysis/scanner/: mod.rs  rar.rs  sevenz.rs  (+1 more)
src-tauri/src/core/: activity.rs  archive_input.rs  cache.rs  error.rs  logger.rs  path_utils.rs  performance.rs  registry.rs  task_control.rs
src-tauri/src/data/: models.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/install/: atomic_installer.rs  installer.rs  verifier.rs
src-tauri/src/management/: addon_updater.rs  csl_index.rs  gateway.rs  management_index.rs  skunk_updater.rs  x_updater_profile.rs  zibo_updater.rs
src-tauri/src/map/: mod.rs
src-tauri/src/scenery/: geo_regions.rs  scenery_classifier.rs  scenery_index.rs  scenery_packs_manager.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/services/: library_links.rs  updater.rs
(+174 files in other folders)
