[package]
name = "xfastinstall"
version = "0.1.0"
description = "X-Plane Addon Installer"
authors = ["XFastInstall Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "2"
sevenz-rust2 = "0.10"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
once_cell = "1.19"
dirs = "5"
rayon = "1.10"
unrar = "0.5"
tempfile = "3"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
glob = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lib]
name = "xfastinstall_lib"
crate-type = ["lib"]

[profile.release]
opt-level = 3          # Optimize for speed (fastest runtime performance)
lto = "fat"            # Full link-time optimization (best performance)
codegen-units = 1      # Single codegen unit (better optimization)
strip = "symbols"      # Strip symbols (smaller binary, no performance impact)
panic = "abort"        # Abort on panic (smaller binary, faster)
overflow-checks = false # Disable overflow checks for maximum speed
